<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/portfolio">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:id="@+id/imgGanttechLogo"
        android:src="@drawable/ganttechlogo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView android:text="@string/nanodegree_apps"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitle"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textColor="#ff8f080c"
        android:layout_below="@+id/imgGanttechLogo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgNanoAndroid"
        android:src="@drawable/android"
        android:layout_below="@+id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/btnSpotifyStreamer"
        android:textSize="14sp"
        android:background="#FFC107"
        android:onClick="spotifyStreamer"
        android:textStyle="bold"
        android:layout_alignTop="@+id/btnScoresApp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/btnScoresApp"
        android:textSize="14sp"
        android:background="#FFC107"
        android:onClick="scoresApp"
        android:textStyle="bold"
        android:layout_above="@+id/btnBuildItBigger"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="27dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/btnLibraryApp"
        android:textSize="14sp"
        android:background="#FFC107"
        android:onClick="libraryApp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/btnBuildItBigger"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/btnBuildItBigger"
        android:textSize="14sp"
        android:background="#FFC107"
        android:onClick="buildItBigger"
        android:textStyle="bold"
        android:layout_above="@+id/btnCapstoneApp"
        android:layout_alignRight="@+id/tvTitle"
        android:layout_alignEnd="@+id/tvTitle"
        android:layout_marginBottom="27dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/btnXYZreader"
        android:textSize="14sp"
        android:background="#FFC107"
        android:onClick="xyzReader"
        android:textStyle="bold"
        android:layout_alignTop="@+id/btnCapstoneApp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone_app"
        android:id="@+id/btnCapstoneApp"
        android:textSize="14sp"
        android:background="#FFC107"
        android:onClick="capstoneApp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/tvTitle"
        android:layout_alignEnd="@+id/tvTitle" />

</RelativeLayout>
